[gd_scene load_steps=10 format=3 uid="uid://bk6gqt3y7ug41"]

[ext_resource type="Script" path="res://scripts/component/piece.gd" id="1_xlk3g"]
[ext_resource type="Texture2D" uid="uid://c33atpeont21j" path="res://assets/graphics/test/piece/ready_smiley_face_001.png" id="2_ltvoe"]
[ext_resource type="Texture2D" uid="uid://bhlehlssx8h1l" path="res://assets/graphics/test/piece/raspberry_face.png" id="2_wyqqb"]
[ext_resource type="Texture2D" uid="uid://bfj1hf1cau77g" path="res://assets/graphics/test/piece/ready_raspberry_face_001.png" id="3_670ur"]
[ext_resource type="Texture2D" uid="uid://d1dpoovlwtoqk" path="res://assets/graphics/test/piece/ready_smiley_face_002.png" id="3_x6xyf"]
[ext_resource type="Texture2D" uid="uid://6cfsc2qi0tid" path="res://assets/graphics/test/piece/smiley_face.png" id="4_ss1xf"]
[ext_resource type="Texture2D" uid="uid://c3y8i4wnrnmx8" path="res://assets/graphics/test/piece/ready_raspberry_face_002.png" id="4_yg616"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ay3nu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wyqqb")
}],
"loop": true,
"name": &"raspberry_face",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_670ur")
}, {
"duration": 1.0,
"texture": ExtResource("4_yg616")
}],
"loop": true,
"name": &"ready_raspberry_face",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ltvoe")
}, {
"duration": 1.0,
"texture": ExtResource("3_x6xyf")
}],
"loop": true,
"name": &"ready_smiley_face",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ss1xf")
}],
"loop": true,
"name": &"smiley_face",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hey13"]
size = Vector2(48, 48)

[node name="GamePiece" type="Area2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_xlk3g")

[node name="PieceAnims" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ay3nu")
animation = &"ready_raspberry_face"
frame_progress = 0.491324

[node name="PieceCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hey13")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
